Closed
Bug 1204913
Opened 7 years ago
Closed 7 years ago
IonMonkey: MIPS32: Fix build erros in defineSinCos
Categories
(Core :: JavaScript Engine: JIT, defect)
Tracking
()
RESOLVED
FIXED
mozilla43
Tracking | Status | |
---|---|---|
firefox43 | --- | fixed |
People
(Reporter: hev, Assigned: hev)
Details
Attachments
(1 file)
1.06 KB,
patch
|
sunfish
:
review+
|
Details | Diff | Splinter Review |
In file included from /home/heiher/git/mips64/gecko-dev/js/src/jit/BaselineIC.cpp:38:0, from /home/heiher/git/mips64/gecko-dev/js/src/mips32-release/js/src/Unified_cpp_js_src3.cpp:74: /home/heiher/git/mips64/gecko-dev/js/src/jit/shared/Lowering-shared-inl.h:196:2: error: #error "Unsupported architecture for Si nCos" #error "Unsupported architecture for SinCos" ^ mips64el-unknown-linux-gnu-g++ -o Unified_cpp_js_src4.o -c -I../../dist/system_wrappers -include /home/heiher/git/mips64/gecko -dev/config/gcc_hidden.h -DENABLE_BINARYDATA -DENABLE_SHARED_ARRAY_BUFFER -DEXPORT_JS_API -DAB_CD= -DNO_NSPR_10_SUPPORT -I/home /heiher/git/mips64/gecko-dev/js/src -I. -I../../dist/include -I/usr/include/nspr -fPIC -DMOZILLA_CLIENT -include .. /../js/src/js-confdefs.h -MD -MP -MF .deps/Unified_cpp_js_src4.o.pp -Wall -Wsign-compare -Wtype-limits -Wno-invalid-offsetof - Wcast-align -fno-rtti -fno-exceptions -fno-math-errno -std=gnu++0x -pthread -pipe -DNDEBUG -DTRIMMED -g -O2 -march=loongson3a -mabi=32 -fdiagnostics-color=auto -mno-branch-likely -w -fomit-frame-pointer -I/opt/mips64el-toolchain/platforms/current/usr/i nclude /home/heiher/git/mips64/gecko-dev/js/src/mips32-release/js/src/Unified_cpp_js_src4.cpp Unified_cpp_js_src5.o In file included from /home/heiher/git/mips64/gecko-dev/js/src/jit/Ion.cpp:53:0, from /home/heiher/git/mips64/gecko-dev/js/src/mips32-release/js/src/Unified_cpp_js_src4.cpp:56: /home/heiher/git/mips64/gecko-dev/js/src/jit/shared/Lowering-shared-inl.h:196:2: error: #error "Unsupported architecture for Si nCos" #error "Unsupported architecture for SinCos" ^
Assignee | ||
Comment 1•7 years ago
|
||
Sorry, I have updated the codegen macro for mips32. ;)
Attachment #8661276 -
Flags: review?(sunfish)
Comment 2•7 years ago
|
||
Comment on attachment 8661276 [details] [diff] [review] 0001-IonMonkey-MIPS32-Fix-build-erros-in-defineSinCos.patch Review of attachment 8661276 [details] [diff] [review]: ----------------------------------------------------------------- I'm not normally a MIPS patch reviewer, but this is small and obvious enough to just go with it.
Attachment #8661276 -
Flags: review?(sunfish) → review+
https://hg.mozilla.org/mozilla-central/rev/ee2ddd22b6e5
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox43:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla43
You need to log in
before you can comment on or make changes to this bug.
Description
•