Bug 1204913 - IonMonkey: MIPS32: Fix build erros in defineSinCos. r=sunfish

---
 js/src/jit/shared/Lowering-shared-inl.h | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)